some more tour styling and images

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                      <div class="sliderContainer">
                         <div class = 'iosSlider'>
                            <div class = 'slider '>
+                              
+                              <!-- slide 1 -->
                               <div class="slide slide1">
                                  <h1>Look what kids are doing to achieve their goals</h1>
                                  <div class="goalContent ui-grid-b">
@@ -147,9 +149,10 @@
                               <div class="slide slide4">
                                  <h1>The Power of the Community</h1>
                               </div>
-                           </div>
-                        </div>
-                     </div>
+                              
+                           </div><!-- END slider -->
+                        </div><!-- END iosSlider -->
+                     </div><!-- END sliderContainer -->
 
                      <!-- slide indicator dots -->
                      <div class="indicators">
