styling of image upload

--- a/index.html
+++ b/index.html
@@ -1798,7 +1798,7 @@
                                 </div>
                             </div>
                             <div class="goalPhoto">
-                                <div data-role="fieldcontain">
+                                <div data-role="fieldcontain" class="photoContain">
                                     <label for="newGoalPhotoUpload">Upload a Photo</label>
                                     <input type='file' id="newGoalPhotoUpload" />
                                     <img id="customGoalPreview" src="#" alt="custom goal" />
