updated compressed images and more tour formatting

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                                        </div>
                                     </div>
                                  </div>
+                                 <img src="img/2steps@2x.png" style="display:block;margin: auto;width: 92%;"/>
                                  <div class="continueMessage">See what people are saying</div>
                               </div>
                               
@@ -148,6 +149,10 @@
                               <!-- slide 4 -->
                               <div class="slide slide4">
                                  <h1>The Power of the Community</h1>
+                                 <h2>Kids on Tykoon have...</h2>
+                                 <div class="stat stat1">Completed <span>24,676</span> tasks in the last week</div>
+                                 <div class="stat stat2">Achieved a total of <span>335,799</span> Savings Goals</div>
+                                 <div class="stat stat3">Pledged <span>$17,455</span> to charities</div>
                               </div>
                               
                            </div><!-- END slider -->
