--- a/index.html
+++ b/index.html
@@ -1988,7 +1988,7 @@
                          I,
                          <input type="text" id="agreementParentFirst" placeholder="parent first name" data-theme="a" data-inline="true" />
                          <input type="text" id="agreementParentLast" placeholder="last name" data-theme="a" />
-                         agree to allow <strong class="childFirstName"></strong> to earn his way to some fantastic goals,
+                         agree to allow <strong class="childFirstName"></strong> to earn <span class="childPossesivePronoun"></span> way to some fantastic goals,
                          to regularly encourage <span class="childPossesivePronoun"></span> progress, and to give <span class="childPersonalPronoun"></span>
                          the chance to make <span class="childPossesivePronoun"></span> own money smart choices.
                          <div class="email">
