--- a/index.html
+++ b/index.html
@@ -2039,7 +2039,7 @@
         <div data-role="page" id="nonOptimalSizeCover" class="clearfix">
             <div class="verticalWrapper">
                 <div class="verticalMiddle center">
-                    <h1>This app is best viewed in landscape <span class="nonIpad">on an iPad</span></h1>
+                    <h1>This demo is best viewed in landscape <span class="nonIpad">on an iPad</span></h1>
                     <h3 class="ipad">Please rotate your device</h3>
                     <h4 class="continueNonOptimized">
                         <span class="ipad">Tap</span>
