Restart demo link

--- a/index.html
+++ b/index.html
@@ -189,7 +189,11 @@
                         <div class="balance">$0.00</div>
                         <div class="dropArrow"><!-- <div class="arrow"></div> --></div>
                     </div>
+                    <div class="userOptions">
+                        <div class="restartDemo">Restart Demo</div>
+                    </div>
                 </div>
+
             </div>
             
             <!-- 2 col layout -->
@@ -1804,7 +1808,7 @@
                                 <div data-role="fieldcontain" class="photoContain">
                                     <label for="newGoalPhotoUpload">Upload a Photo</label>
                                     <input type='file' id="newGoalPhotoUpload" />
-                                    <img id="customGoalPreview" src="#" alt="custom goal" />
+                                    <img id="customGoalPreview" src="" alt="custom goal" />
                                 </div>
 
                             </div>
