Dynamic changing title of custom goal popup

--- a/index.html
+++ b/index.html
@@ -2212,7 +2212,7 @@
             <!-- create a custom goal form popup form -->
             <div data-role="popup" id="customGoalPopup">
                 <a href="#" data-rel="back"  class="closePopupButton ui-btn-right">X</a>
-                <div class="title ui-bar ui-bar-a">Create your own goal</div>
+                <div class="title ui-bar ui-bar-a"></div>
                 <div class="customGoalContent" data-role="content">
                     <form method="get" id="customGoalForm">
 
